[package]
name = "ordered-vecmap"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Ordered map and set based on vectors and binary search"
repository = "https://github.com/Nugine/ordered-vecmap"
readme = "README.md"
documentation = "https://docs.rs/ordered-vecmap"
categories = ["data-structures"]
keywords = ["ordered", "map", "set"]

[dependencies]
serde = { version = "1.0.137", optional = true, default-features = false, features = ["alloc"] }

[dev-dependencies]
criterion = "0.5.1"
fnv = "1.0.7"
rand = "0.8.5"

[[bench]]
name = "maps"
harness = false

[profile.bench]
lto = "fat"
